--- a/01_python/problems/01_problem.ipynb
+++ b/01_python/problems/01_problem.ipynb
@@ -18,40 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'opening_price': '13498000', 'closing_price': '12407000', 'min_price': '11879000', 'max_price': '13533000', 'average_price': '12654193.0604', 'units_traded': '17280.70018965', 'volume_1day': '17280.70018965', 'volume_7day': '90537.57174207', 'buy_price': '12409000', 'sell_price': '12418000', '24H_fluctate': '-1091000', '24H_fluctate_rate': '-8.08', 'date': '1563177564910'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
+    "from pprint import pprint\n",
     "\n",
     "url = \"https://api.bithumb.com/public/ticker/btc\"\n",
     "data = requests.get(url).json()['data']\n",
-    "print(data)"
+    "pprint(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "상승장\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 아래에 코드를 작성하세요.\n",
+    "\"\"\"\n",
+    " - 변동폭 : 최고와 최저의 차이\n",
+    " - 시가 : 시작가\n",
+    "\"\"\"\n",
     "variable = int(data.get('max_price')) - int(data.get('min_price')) # 변동폭\n",
     "start = int(data.get('opening_price')) # 시가\n",
     "if (start + variable) >= int(data.get('max_price')):\n",
@@ -78,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lf s t shrt, y nd pythn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 아래에 코드를 작성하세요.\n",
     "before = list(my_str)\n",
@@ -110,6 +91,65 @@
     "        revise.append(i)\n",
     "    count += 1\n",
     "print(''.join(revise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_str = \"Life is too short, you need python\"\n",
+    "\n",
+    "\"\"\"\n",
+    " - 그럼 하나한씩 돌면서 모음이면 기록하지 않고, 모음이 아니면 기록해야 겠다!\n",
+    " - => 기록할 변수가 필요하네!\n",
+    " - => result = '' 선언\n",
+    "\"\"\"\n",
+    "result = ''\n",
+    "\n",
+    "# 문자열을 하나하나씩 돌면서\n",
+    "for char in my_str:\n",
+    "#    모음이 아니면 기록\n",
+    "    if char != 'a' and char != 'e' and char != 'i' and char != 'o' and char != 'u':\n",
+    "        result += char\n",
+    "print(result)\n",
+    "\n",
+    "# 무식해보이지만 맞는 코드이다. 이렇게 단계별로 끊어서 생각하면 문제를 풀 수 있다.\n",
+    "# 두 번째 방법, 세 번째 방법은 한 번에 접근해서 짤 수는 없으므로 지금은 첫 번째 방법처럼 짜는게 우선이다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 각각의 비교가 아니라, 어떤 통 안에 들어있나없나를 판단(in을 사용)\n",
+    "\n",
+    "vowels = ['a', 'e', 'i', 'o', 'u'] # 리스트대신 문자열 'aeiou'로도 가능하다.\n",
+    "result = ''\n",
+    "\n",
+    "for char in my_str:\n",
+    "    if char not in vowels:\n",
+    "        result += char\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 새로운 변수를 만드는게 아니라 원본을 수정\n",
+    "\n",
+    "vowels = 'aeiou'\n",
+    "\n",
+    "for vowel in vowels:\n",
+    "    my_str = my_str.replace(vowel, '')\n",
+    "    \n",
+    "print(my_str)"
    ]
   },
   {
