--- a/01_python/problems/02_problem.ipynb
+++ b/01_python/problems/02_problem.ipynb
@@ -72,6 +72,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사의 풀이법\n",
+    "\n",
+    "# 딕셔너리 카운트\n",
+    "# 딕셔너리에서 키와 값을 모두 가져와서,\n",
+    "# 키가 과일 리스트에 있으면 특정 카운트에 그 키의 값을 계속해서 더한다.\n",
+    "# 반대로 키가 과일 리스트에 없으면, 다른 카운트에 그 키의 값을 계속해서 더한다.\n",
+    "\n",
+    "fruit_count = 0\n",
+    "not_fruit_count = 0\n",
+    "\n",
+    "for fruit, count in basket_items.items():\n",
+    "    if fruit in fruits:\n",
+    "        fruit_count += count\n",
+    "    else:\n",
+    "        not_fruit_count += count\n",
+    "print(f'과일은 {fruit_count}개이고, {not_fruit_count}개는 과일이 아닙니다..')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,13 +127,28 @@
     "\n",
     "shorted_name = ''\n",
     "for i in name:\n",
-    "    if i == name[0]:\n",
-    "        shorted_name += i + ' '\n",
-    "    elif i == name[len(name)-1]:\n",
+    "    if (i == name[0]) or (i == name[len(name)-1]):\n",
     "        shorted_name += i + ' '\n",
     "    else:\n",
-    "        shorted_name += i[0:1] + '. '\n",
+    "        shorted_name += i[0:1].upper() + '. '\n",
     "print(shorted_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사의 풀이법\n",
+    "\n",
+    "name = input() # str\n",
+    "names = name.split() # 'Alice Betty' -> ['Alice', 'Betty']\n",
+    "# 반복문을 통해 처음과 끝 요소를 제외한 나머지 요소들을 '대문자 + .'으로 변경한다.\n",
+    "for i in range(1, len(names)-1):\n",
+    "    names[i] = names[i][0].upper() + '.'\n",
+    "# 리스트를 문자열로 바꾼다. (.join())\n",
+    "print(' '.join(names)) # 공백을 기준으로 문자열을 붙인다."
    ]
   },
   {
@@ -144,10 +183,14 @@
    "outputs": [],
    "source": [
     "# 아래에 코드를 작성하세요.\n",
+    "\n",
+    "# 첫 번째 반복문은 2부터 9까지 반복\n",
+    "# 두 번째 반복문은 1부터 9까지 반복\n",
     "for i in range(2, 10):\n",
     "    print('------- [{} 단] -------'.format(i))\n",
     "    for j in range(1, 10):\n",
-    "        print(f'{i} X {j} = {i*j}')"
+    "        print(f'{i} X {j} = {i*j}')\n",
+    "    print()"
    ]
   },
   {
@@ -200,7 +243,7 @@
     "# 아래에 코드를 작성하세요.\n",
     "\n",
     "for month in calendar.keys():\n",
-    "    print('         {} 월         '.format(month))\n",
+    "    print('         {} 월'.format(month))\n",
     "    for a in weeks:\n",
     "        print(a, end = ' ')\n",
     "    print()\n",
@@ -216,6 +259,76 @@
     "                print(' ' + str(i), end = '\\n')\n",
     "            else:\n",
     "                print(i, end = '\\n')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendar = { \n",
+    "        1: 31, 2: 28, 3: 31, 4: 30, 5: 31,6: 30, \n",
+    "        7: 31, 8: 31, 9: 30, 10: 31, 11: 30, 12: 31 \n",
+    "} \n",
+    "weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa', 'Su'] \n",
+    "# 아래에 코드를 작성하세요.(함수 사용)\n",
+    "\n",
+    "def single_cipher(a):\n",
+    "    if a < 10:\n",
+    "        print(' ' + str(a), end = ' ')\n",
+    "    else:\n",
+    "        print(a, end = ' ')\n",
+    "\n",
+    "def double_cipher(b):\n",
+    "    if b < 10:\n",
+    "        print(' ' + str(b), end = '\\n')\n",
+    "    else:\n",
+    "        print(b, end = '\\n')\n",
+    "\n",
+    "for month in calendar.keys():\n",
+    "    print('         {} 월'.format(month))\n",
+    "    for a in weeks:\n",
+    "        print(a, end = ' ')\n",
+    "    print()\n",
+    "    total_days = int(calendar[month])\n",
+    "    for i in range (1, total_days+1):\n",
+    "        if i % 7 != 0:\n",
+    "            single_cipher(i)\n",
+    "        else:\n",
+    "            double_cipher(i)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사의 풀이법\n",
+    "\n",
+    "calendar = { \n",
+    "        1: 31, 2: 28, 3: 31, 4: 30, 5: 31,6: 30, \n",
+    "        7: 31, 8: 31, 9: 30, 10: 31, 11: 30, 12: 31 \n",
+    "} \n",
+    "weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa', 'Su'] \n",
+    "\n",
+    "# 딕셔너리의 키, 값을 반복문을 통해 이용한다.\n",
+    "\n",
+    "for month, count_day in calendar.items():\n",
+    "    count = 0\n",
+    "    print(f'{month:10} 월')\n",
+    "    for day in weeks:\n",
+    "        print(f'{day}', end = ' ')\n",
+    "    print()\n",
+    "    for i in range(1, count_day+1):\n",
+    "        print(f'{i:2}', end = ' ')\n",
+    "        count += 1\n",
+    "        if count == 7:\n",
+    "            print()\n",
+    "            count = 0\n",
     "    print()"
    ]
   },
@@ -243,10 +356,26 @@
    "outputs": [],
    "source": [
     "# 아래에 코드를 작성하세요.\n",
-    "phone_number = input(\"폰 번호 적어 : \")\n",
+    "phone_number = input()\n",
     "\n",
-    "if phone_number[0:3] == '010':\n",
-    "    print(\"*******\" + phone_number[-4::])\n",
+    "if phone_number[0:3] == '010' and len(phone_number) == 11:\n",
+    "    print(\"*******\" + phone_number[-4:])\n",
+    "else:\n",
+    "    print('핸드폰번호를 입력하세요.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 풀이 방법\n",
+    "\n",
+    "phone_number = input()\n",
+    "\n",
+    "if phone_number[0:3] == '010' and len(phone_number) == 11:\n",
+    "    print(f'{phone_number[-4:]:*>11}')\n",
     "else:\n",
     "    print('핸드폰번호를 입력하세요.')"
    ]
@@ -266,13 +395,31 @@
    "outputs": [],
    "source": [
     "# 아래에 코드를 작성하세요.\n",
-    "string = input(\"문자를 입력하세요 :\")\n",
+    "text = input(\"문자를 입력하세요 :\")\n",
     "\n",
-    "length = int(len(string))\n",
+    "length = int(len(text))\n",
     "if length % 2 == 0:\n",
     "    print(string[int(length/2)]+string[int(length/2)+1])\n",
     "else:\n",
     "    print(string[int((1+length)/2)-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사의 풀이법(슬라이싱 개념 사용)\n",
+    "\n",
+    "text = input()\n",
+    "num = len(text) // 2\n",
+    "\n",
+    "if num % 2:\n",
+    "    middle = text[num]\n",
+    "else:\n",
+    "    middle = text[num-1:num+1]\n",
+    "print(middle)"
    ]
   },
   {
@@ -348,6 +495,22 @@
     "        print(f'{number} 는 소수입니다.')\n",
     "    else:\n",
     "        print(f'{number} 는 소수가 아닙니다. {div[1]} 는 {number} 의 인수입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 반복문의 else 를 사용하는 것이 포인트 !\n",
+    "for number in numbers:\n",
+    "    for x in range(2, number):\n",
+    "        if number % x == 0:\n",
+    "            print(f'{number} 는 소수가 아닙니다. {x} 는 {number} 의 인수입니다.')\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f'{number} 는 소수입니다.')"
    ]
   }
  ],
