190717_TIL_add 03_problems

--- a/01_python/03_function.ipynb
+++ b/01_python/03_function.ipynb
@@ -48,6 +48,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area = width * height\n",
+    "perimeter = 2 * (height + width)\n",
+    "print(f'직사각형 둘레: {perimeter}, 면적: {area}입니다.')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,6 +114,29 @@
    "outputs": [],
    "source": [
     "# 위의 사각형 코드를 함수로 아래에 작성해보세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rectangle(width, height):\n",
+    "    area = width * height\n",
+    "    perimeter = 2 * (width + height)\n",
+    "    return f'직사각형 둘레: {perimeter}, 면적: {area}입니다.'\n",
+    "# print는 터미널에 단순 출력 기능, return 변수에 할당가능! print로 설정하면 None이 출력됨.\n",
+    "# 함수에서는 반드시 return을 쓰자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rectangle(30, 70)"
    ]
   },
   {
@@ -189,7 +223,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 my_max 함수를 만들어주세요."
+    "# 여기에 my_max 함수를 만들어주세요.\n",
+    "def my_max(num_1, num_2):\n",
+    "    if num_1 > num_2:\n",
+    "        return num_1\n",
+    "    else:\n",
+    "        return num_2"
    ]
   },
   {
@@ -198,7 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 그리고 호출 해봅시다."
+    "# 그리고 호출 해봅시다.\n",
+    "print(my_max(1, 5))"
    ]
   },
   {
@@ -244,6 +284,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_list_max(a, b):\n",
+    "    if sum(a) > sum(b):\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list_max([10, 3], [5, 9])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,7 +330,19 @@
    "outputs": [],
    "source": [
     "# 원기둥의 부피를 구하는 함수를 만들어보자\n",
-    "# 밑면의 넓이 * 높이"
+    "# 밑면의 넓이 * 높이\n",
+    "def cylinder(r, h):\n",
+    "    return r**2 * 3.14 * h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cylinder(5, 2))\n",
+    "print(cylinder(2, 5))"
    ]
   },
   {
@@ -314,6 +388,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name='익명'): # 기본값이 있으면 오류를 방지해주는 역할도 함\n",
+    "    return f'{name}, 안녕?'\n",
+    "\n",
+    "greeting()\n",
+    "greeting('길동')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,7 +442,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 수정해 봅시다."
+    "def greeting(name='john', age):\n",
+    "    return f'{name}은 {age}살 입니다.'\n",
+    "greeting(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 수정해 봅시다.\n",
+    "def greeting(age, name='john'):\n",
+    "    return f'{name}은 {age}살 입니다.'\n",
+    "greeting(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(age, name='john'):\n",
+    "    return f'{name}은 {age}살 입니다.'\n",
+    "greeting(1, '철수')"
    ]
   },
   {
@@ -377,10 +489,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(age, name='john'):\n",
+    "    return f'{name}은 {age}살 입니다.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greeting(name = '철수', age = 25) # 이와 같이 키워드 인자를 사용하면 위치 바뀌어도 출력됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greeting(25, name = '철수') # 위와 아래랑 같은 출력"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* **단 아래와 같이 `키워드 인자`를 활용한 뒤에 `위치 인자`를 활용할 수는 없습니다.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greeting(age = 25, '철수')"
    ]
   },
   {
@@ -431,7 +580,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('hi', '안녕', 'Guten Tag', 'gonnichiwa', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# args는 tuple!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_func(*args):\n",
+    "    return args\n",
+    "\n",
+    "my_func(1, 2)"
    ]
   },
   {
@@ -467,16 +637,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 아래에 my_max 를 작성해주세요."
+    "# 아래에 my_max 를 작성해주세요.\n",
+    "def my_max(*args):\n",
+    "    result = 0\n",
+    "    for idx, val in enumerate(args):\n",
+    "        if idx == 0:\n",
+    "            result = val\n",
+    "        else:\n",
+    "            if val > result:\n",
+    "                result = val\n",
+    "    return result\n",
+    "\n",
+    "my_max(10, 20, 30, 50)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 정의되지 않은 인자들 처리하기\n",
+    "## 정의되지 않은 키워드 인자들 처리하기\n",
     "\n",
-    "정의되지 않은 인자들은 `dict` 형태로 처리가 되며, `**`로 표현합니다. \n",
+    "정의되지 않은 키워드 인자들은 `dict` 형태로 처리가 되며, `**`로 표현합니다. \n",
     "\n",
     "주로 `kwagrs`라는 이름을 사용하며, `**kwargs`를 통해 인자를 받아 처리할 수 있습니다.\n",
     "\n",
@@ -510,6 +691,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = dict(한국어='안녕', 영어='hello', 독일어='Guten Tag') # 괄호 안은 키워드 인자\n",
+    "print(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 주의 사항\n",
+    "# 식별자는 숫자로 시작할 수 없다.(키워드 인자로 넘기면 함수 안에서 식별자로 쓰이기 때문)\n",
+    "dict(1=1, 2=2) # 이렇게 쓰면 안 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# key가 숫자인 경우는 이렇게 사용해야 합니다.\n",
+    "dict([(1, 1), (2, 2)])\n",
+    "dict(((1, 1), (2, 2)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -540,7 +753,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 함수를 호출 해보세요."
+    "# 내 풀이 방법\n",
+    "\n",
+    "def my_dict(**kwargs):\n",
+    "    text = ''\n",
+    "    count = 0\n",
+    "    for key, val in kwargs.items():\n",
+    "        text += f'{key}: {val}'\n",
+    "        count += 1\n",
+    "        if count != len(kwargs):\n",
+    "            text += ', '\n",
+    "    return text\n",
+    "\n",
+    "result = my_dict(한국어='안녕', 영어='hello', 독일어='Guten Tag')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사 풀이 방법\n",
+    "\n",
+    "def my_dict(**kwargs):\n",
+    "    result = []\n",
+    "    for key, value in kwargs.items():\n",
+    "        result.append(f'{key}: {value}')\n",
+    "    return ', '.join(result) # 리스트 -> 문자열로 ', '기준으로 합치기\n",
+    "\n",
+    "result = my_dict(한국어='안녕', 영어='hello', 독일어='Guten Tag')\n",
+    "print(result)"
    ]
   },
   {
@@ -550,14 +794,19 @@
    "outputs": [],
    "source": [
     "# 사실은 dict()는 출력이 아니라 딕셔너리를 return 합니다. \n",
-    "# 딕셔너리를 return 하는 my_fake_dict() 를 만들어주세요."
+    "# 딕셔너리를 return 하는 my_fake_dict() 를 만들어주세요.\n",
+    "def my_fake_dict(**kwargs):\n",
+    "    return kwargs\n",
+    "\n",
+    "result = my_fake_dict(한국어='안녕', 영어='hello', 독일어='Guten Tag')\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 인자 리스트 언패킹 (unpacking arguments list)\n",
+    "## 인자 리스트 언패킹 (unpacking arguments list)\n",
     "\n",
     "- 패킹(packing) : 여러 개의 값을 하나의 컬렉션으로 묶어 변수에 대입하는 것\n",
     "```python\n",
@@ -571,15 +820,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(range(3, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = [3, 6]\n",
+    "list(range(*args)) # list로부터 언패킹한 인자 호출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다음과 같이 사용할 수도 있습니다.\n",
+    "#args_list = ['ming', 'alice', 'tom']\n",
+    "#kwargs_dict = {'wilson': 'ball', 'toy': 'story'}\n",
+    "\n",
+    "def combination(*args, **kwargs):\n",
+    "    return args, kwargs\n",
+    "\n",
+    "result = combination('ming', 'alice', 'tom', willson='ball', toy='story', spider='man')\n",
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 로그인 검증 예제\n",
+    "### 회원가입 검증 예제\n",
     "\n",
-    "> 로그인 로직을 검증하는 코드를 작성 해봅시다. \n",
+    "> 회원가입 로직을 검증하는 코드를 작성 해봅시다. \n",
     "\n",
-    "* login 함수는 `username`, `password`, `password_confirmation`을 인자로 받습니다.\n",
-    "* login 함수는 `username`과, `password`가 있는지 확인을 합니다.\n",
+    "* signup 함수는 `username`, `password`, `password_confirmation`을 인자로 받습니다.\n",
+    "* signup 함수는 `username`과, `password`가 있는지 확인을 합니다.\n",
     "* `password`가 8자리 이상인지 확인을 합니다.\n",
     "* `password`와 `password_confirmation`이 일치하는지 확인을 합니다."
    ]
@@ -603,7 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# login 함수를 작성 해주세요."
+    "# signup 함수를 작성 해주세요."
    ]
   },
   {
@@ -612,8 +897,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# login 함수에 my_account를 넘겨 확인 해보세요.\n",
-    "login(**my_account)"
+    "def signup(username, password, password_confirmation):\n",
+    "    if password == password_confirmation:\n",
+    "        return f'{username}님 회원가입이 완료되었습니다.'\n",
+    "    else:\n",
+    "        return f'비밀번호 확인이 일치하지 않습니다.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# signup 함수에 my_account를 넘겨 확인 해보세요.\n",
+    "signup(**my_account)"
    ]
   },
   {
@@ -656,7 +954,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 코드를 작성해주세요."
+    "# 여기에 코드를 작성해주세요.\n",
+    "def my_url(key, targetDt, itemPerPage='10'):\n",
+    "    return f'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage={itemPerPage}&key={key}&targetDt={targetDt}&'\n",
+    "\n",
+    "api = {\n",
+    "    'key': '^^',\n",
+    "    'targetDt': '20190701',\n",
+    "    'itemPerPage': '1'\n",
+    "}\n",
+    "my_url(**api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1(재사용성이 낮은 코드)\n",
+    "# 반드시 api의 key 이름이 위치인자명과 같아야 한다는 제한이 있음\n",
+    "\n",
+    "def my_url(key, targetDt):\n",
+    "    return f'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage=10&key={key}&targetDt={targetDt}&'\n",
+    "\n",
+    "api = {\n",
+    "    'key': '^^',\n",
+    "    'targetDt': '20190701',\n",
+    "}\n",
+    "\n",
+    "my_url(**api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2(재사용성이 좋음)\n",
+    "\n",
+    "def my_url(**kwargs):\n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
+    "    for key, value in kwargs.items():\n",
+    "        base_url += f'{key}={value}&'\n",
+    "    return base_url\n",
+    "\n",
+    "api = {\n",
+    "    'key': '^^',\n",
+    "    'targetDt': '20190701'\n",
+    "}\n",
+    "\n",
+    "my_url(**api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3(기본 인자 값 추가)\n",
+    "\n",
+    "def my_url(itemPerPage=10, **kwargs): # itemPerPage=10(기본 인자 값)은 default 값으로 지정하고, 가변 인자 리스트(**kwargs)는 뒤에 붙는다.\n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
+    "    base_url += f'itemPerPage={itemPerPage}&'\n",
+    "    for key, value in kwargs.items():\n",
+    "        base_url += f'{key}={value}&'\n",
+    "    return base_url\n",
+    "\n",
+    "api = {\n",
+    "    'key': '^^',\n",
+    "    'targetDt': '20190701'\n",
+    "}\n",
+    "\n",
+    "my_url(3, **api)"
    ]
   },
   {
@@ -683,7 +1055,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 코드를 작성해주세요"
+    "# 여기에 코드를 작성해주세요\n",
+    "\n",
+    "def my_url(itemPerPage=10, **kwargs):\n",
+    "    \n",
+    "    # 검증\n",
+    "    if int(itemPerPage) not in range(1,11):\n",
+    "        return f'1~10까지의 값을 넣어주세요.'\n",
+    "    \n",
+    "    if 'key' not in kwargs or 'targetDt' not in kwargs:\n",
+    "        return f'필수 요청변수가 누락되었습니다.'\n",
+    "    \n",
+    "    \n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
+    "    base_url += f'itemPerPage={itemPerPage}&'\n",
+    "    for key, value in kwargs.items():\n",
+    "        base_url += '{}={}&'.format(key, value)\n",
+    "    return base_url\n",
+    "\n",
+    "api = {\n",
+    "    'key': '^^',\n",
+    "    'targetDt': '20190701'\n",
+    "}\n",
+    "\n",
+    "my_url(9, **api)"
    ]
   },
   {
@@ -713,6 +1108,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test()\n",
+    "    str = '4' # local scope\n",
+    "    \n",
+    "str = '5' # Global scope\n",
+    "str(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -720,6 +1128,15 @@
     "* str 을 Global scope에서 먼저 찾아서 `str = 4`를 가져오고, \n",
     "* 이는 함수가 아니라 변수이기 때문에 `not callable`하다라는 오류를 내뱉게 됩니다.\n",
     "* 우리가 원하는 `str()`은 Built-in scope에 있기 때문입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del str"
    ]
   },
   {
@@ -737,6 +1154,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = 1 # 전역 변수\n",
+    "def localscope(a):\n",
+    "    return a\n",
+    "\n",
+    "localscope(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 전역 변수를 바꿀 수 있을까요?"
    ]
   },
@@ -746,7 +1176,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "global_num = 3 # 전역 변수\n",
+    "def localscope_2():\n",
+    "    global_num = 5\n",
+    "    return f'global_num이 {global_num}로 설정되었습니다.'\n",
+    "\n",
+    "#localscope_2() => 5로 출력\n",
+    "print(global_num) # => 3으로 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 굳이 전역에 있는 변수를 바꾸고 싶다면, 아래와 같이 선언할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_num = 3 \n",
+    "def localscope_3():\n",
+    "    global global_num # 앞에 global 붙이면 전역 변수를 바꿀 수 있다.\n",
+    "    global_num = 5\n",
+    "    return f'global_num이 {global_num}로 설정되었습니다.'\n",
+    "\n",
+    "localscope_3()\n",
+    "print(global_num)"
    ]
   },
   {
@@ -1079,7 +1540,7 @@
     "width": "204px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
