190718_TIL_modify 03_problems

--- a/01_python/problems/03_problem_00.ipynb
+++ b/01_python/problems/03_problem_00.ipynb
@@ -250,7 +250,7 @@
     "            return count\n",
     "            break\n",
     "        if count == 500:\n",
-    "            return -1\n"
+    "            return -1"
    ]
   },
   {
@@ -294,7 +294,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "def lonely(numbers):\n",
+    "    result = []\n",
+    "    criteria_num = criteria_count = 1\n",
+    "    for num in numbers:\n",
+    "        if result == []:\n",
+    "            result.append(num)\n",
+    "            criteria_num = result[0]\n",
+    "        else:\n",
+    "            if criteria_num != num:\n",
+    "                result.append(num)\n",
+    "                criteria_num = result[criteria_count]\n",
+    "                criteria_count += 1\n",
+    "    return result"
    ]
   },
   {
