190718_TIL_add 03_problem_01

--- a/01_python/03_function.ipynb
+++ b/01_python/03_function.ipynb
@@ -1273,7 +1273,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 아래에 코드를 작성해주세요."
+    "# 아래에 코드를 작성해주세요.\n",
+    "def fact(n):\n",
+    "    result =  1\n",
+    "    # n이 1보다 작아지는 때에 반복이 종료되어야 함\n",
+    "    while n > 1:\n",
+    "        result *= n\n",
+    "        n -= 1\n",
+    "    return result\n",
+    "\n",
+    "fact(5)"
    ]
   },
   {
@@ -1295,7 +1304,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 아래에 factorial() 를 작성해주세요."
+    "# 아래에 factorial() 를 작성해주세요.\n",
+    "def factorial(n):\n",
+    "    if n == 1: # n이 1이면 1을 return하고 재귀호출을 끝냄.(base case)\n",
+    "        return 1\n",
+    "    return n * factorial(n-1) # n과 factorial 함수에 n-1을 넣어서 return된 값을 곱함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img width=\"846\" alt=\"팩톨팩톨\" src=\"https://user-images.githubusercontent.com/52446416/61354150-7b6b9480-a8ac-11e9-9172-81a33e092e85.png\">"
    ]
   },
   {
@@ -1353,7 +1382,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 최대 재귀 깊이\n",
+    "### 최대 재귀 깊이\n",
+    "\n",
+    "<img width=\"815\" alt=\"재귀재귀\" src=\"https://user-images.githubusercontent.com/52446416/61354145-79093a80-a8ac-11e9-88e4-3935ccb54703.png\">\n",
     "\n",
     "```python\n",
     "def ssafy():\n",
@@ -1397,19 +1428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 직접 오류를 확인해보자!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# 직접 오류를 확인해보자!\n",
     "def ssafy():\n",
     "    print('Hello, ssafy!')\n",
     "    ssafy()\n",
-    " \n",
+    "    \n",
     "ssafy()"
    ]
   },
@@ -1456,7 +1479,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 재귀를 이용한 코드 fib() 를 작성해주세요."
+    "# 재귀를 이용한 코드 fib() 를 작성해주세요.\n",
+    "def fib(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return fib(n-1)+fib(n-2)\n",
+    "\n",
+    "fib(10)"
    ]
   },
   {
@@ -1465,7 +1495,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 반복문을 이용한 코드 fib_loop() 를 작성해주세요."
+    "# 반복문을 이용한 코드 fib_loop() 를 작성해주세요.\n",
+    "\n",
+    "# 내가 푼 방법\n",
+    "def fib_loop(n):\n",
+    "    result = []\n",
+    "    for i in range(0, n+1):\n",
+    "        if i < 2:\n",
+    "            result.append(i)\n",
+    "        else:\n",
+    "            result.append(result[i-1]+result[i-2])\n",
+    "    return result[n]\n",
+    "\n",
+    "    \n",
+    "fib_loop(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사가 푼 방법(1)\n",
+    "def fib_loop(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    result = [0, 1]\n",
+    "    # 리스트의 index를 이용해서 앞과 앞앞 값의 합이 새로운 요소로 들어간다.\n",
+    "    for i in range(2, n+1):\n",
+    "        result.append(result[i-1]+result[i-2])\n",
+    "    return result[-1]\n",
+    "\n",
+    "fib_loop(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사가 푼 방법(2) - list에 쌓지 않고 풀이(값을 치환하면서 풀이)\n",
+    "def fib_loop_2(n):\n",
+    "    if n < 2:\n",
+    "        return n\n",
+    "    a, b = 0, 1\n",
+    "    # 0 번째 값 a와 1 번째 값 b를 계속 반복하면서 원하는 값을 만들텐데,\n",
+    "    # n이 2일 때는 단 한번만 계산하면 원하는 값을 만들 수 있기 때문에, range(n-1)이 된다.\n",
+    "    for i in range(n-1):\n",
+    "        a, b = b, a+b # 새로 만든 b에 이전의 a, b 값을 더해 나가면서 새로운 피보나치 값을 만들어 나간다.\n",
+    "    return b\n",
+    "\n",
+    "fib_loop_2(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while문을 활용한 피보나치 수열(python 공식 홈페이지)\n",
+    "def fib_while(n):\n",
+    "    a, b = 0, 1\n",
+    "    while a < n:\n",
+    "        print(a, end=' ')\n",
+    "        a, b = b, a+b\n",
+    "    print()\n",
+    "\n",
+    "fib_while(1000)"
    ]
   },
   {
@@ -1481,7 +1580,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 큰 숫자를 재귀로 짜여진 fib() 함수의 인자로 넘겨보세요."
+    "# 큰 숫자를 재귀로 짜여진 fib() 함수의 인자로 넘겨보세요.\n",
+    "fib(33) # 순간적으로 loading이 걸림"
    ]
   },
   {
@@ -1490,7 +1590,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 100배 되는 숫자를 반복문으로 짜여진 fib_loop() 인자로 넘겨보세요."
+    "# 100배 되는 숫자를 반복문으로 짜여진 fib_loop() 인자로 넘겨보세요.\n",
+    "fib_loop(3300) # 숫자는 더 큰데 loading이 안 걸림"
    ]
   },
   {
@@ -1537,7 +1638,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "204px"
+    "width": "367px"
    },
    "toc_section_display": true,
    "toc_window_display": true
