--- a/01_python/problems/03_problem_00.ipynb
+++ b/01_python/problems/03_problem_00.ipynb
@@ -14,7 +14,7 @@
     "|1,200 ~ 4,600|15%|\n",
     "|4,600 ~ |35%|\n",
     "\n",
-    "즉, 1,300원을 벌었을 경우 `1,200\\*0.06 + 100\\*0.15`를 계산한 결과가 납부해야 하는 세액입니다.\n",
+    "즉, 1,300만원을 벌었을 경우 `1,200\\*0.06 + 100\\*0.15`를 계산한 결과가 납부해야 하는 세액입니다.\n",
     "\n",
     "함수 `tax(won)`을 만들고 납부해야하는 세금의 결과를 반환하는 함수를 만들어보세요.\n",
     "\n",
@@ -88,15 +88,17 @@
    "outputs": [],
    "source": [
     "# 여기에 코드를 작성하세요.\n",
+    "\n",
+    "# 내가 푼 방법\n",
     "def fee(minute, distance):\n",
     "    discount_drive_fee = 0\n",
     "    \n",
-    "    rent_fee = int(minute//10) * 1200\n",
+    "    rent_fee = (minute//10) * 1200\n",
     "    \n",
     "    if minute % 30 in range(20, 30):\n",
-    "        premium = (int(minute//30)+1) * 525\n",
+    "        premium = ((minute//30)+1) * 525\n",
     "    else:\n",
-    "        premium = int(minute//30) * 525\n",
+    "        premium = (minute//30) * 525\n",
     "        \n",
     "    if distance > 100:\n",
     "        discount_drive_fee = (distance-100) * 85\n",
@@ -105,6 +107,22 @@
     "        drive_fee = distance * 170\n",
     "        \n",
     "    return rent_fee + premium + drive_fee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사가 푼 방법\n",
+    "def fee(minute, distance):\n",
+    "    result = minute * 120 + (minute // 30) * 525\n",
+    "    if distance > 100:\n",
+    "        result += 17000 + 85*(distance-100)\n",
+    "    else:\n",
+    "        result += 170 * distance\n",
+    "    return result"
    ]
   },
   {
@@ -141,10 +159,11 @@
    "outputs": [],
    "source": [
     "# 여기에 코드를 작성하세요.\n",
-    "def start_end(text):\n",
+    "def start_end(words):\n",
+    "    # 길이가 2보다 크고(and) 인덱스 0번째와 -1번째 문자가 같은 경우 count를 +1씩 하겠다.\n",
     "    count = 0\n",
-    "    for i in text:\n",
-    "        if len(i) >= 2 and i[0:1] == i[-1:]:\n",
+    "    for word in words:\n",
+    "        if len(word)>=2 and word[0]==word[-1]: # 다중으로 연산자가 있을 때 크게 나누는 기준만 띄고 나머지는 붙인다.(style guide에서 recommend함)\n",
     "            count += 1\n",
     "    return count"
    ]
@@ -184,6 +203,7 @@
    "source": [
     "# 여기에 코드를 작성하세요.\n",
     "def positive_sum(*args):\n",
+    "    # 최종 합산 값 / 반복문을 통해 args를 평가 / 크기가 0보다 큰 지 / 크면 최종 합산 값을 더하기\n",
     "    total = 0\n",
     "    for arg in args:\n",
     "        if arg > 0 :\n",
@@ -241,7 +261,7 @@
     "    count = 0\n",
     "    for i in range(500):\n",
     "        if num % 2 == 0 :\n",
-    "            num = int(num/2)\n",
+    "            num = num/2\n",
     "            count += 1\n",
     "        else:\n",
     "            num = num * 3 + 1\n",
@@ -251,6 +271,21 @@
     "            break\n",
     "        if count == 500:\n",
     "            return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collatz(num):\n",
+    "    # 500번 평가 / 짝수면 2로 나누고, 홀수면 3을 곱하고 +1 / 그러다가 500회 전에 1이 되면 몇 번만에 1이 됐는지\n",
+    "    for i in range(500):\n",
+    "        num = num/2 if num%2==0 else num*3+1\n",
+    "        if num == 1:\n",
+    "            return i + 1\n",
+    "    return -1"
    ]
   },
   {
@@ -284,7 +319,7 @@
     "\n",
     "```python\n",
     "lonely([1, 1, 3, 3, 0, 1, 1]) #=> [1, 3, 0, 1]\n",
-    "lonely([4,4,4,3,3]) #=> [4,3]\n",
+    "lonely([4, 4, 4, 3, 3]) #=> [4, 3]\n",
     "```\n"
    ]
   },
@@ -295,6 +330,8 @@
    "outputs": [],
    "source": [
     "# 여기에 코드를 작성하세요.\n",
+    "\n",
+    "# 내가 푼 방법\n",
     "def lonely(numbers):\n",
     "    result = []\n",
     "    criteria_num = criteria_count = 1\n",
@@ -313,6 +350,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사가 푼 방법\n",
+    "def lonely(numbers):\n",
+    "    # 최종 결과 리스트 생성 / 일단, 첫 번째 수는 들어가야 함(인덱스0)\n",
+    "    # 그 다음 들어가는 수는 현재 리스트의 리스트의 마지막 요소(인덱스-1) 와 비교 후 판단\n",
+    "    result = []\n",
+    "    for idx, num in enumerate(numbers):\n",
+    "        if idx == 0: # 처음에 딱 한 번만 돌고 끝남\n",
+    "            result.append(num)\n",
+    "        if result[-1] != num:\n",
+    "            result.append(num)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -320,7 +376,7 @@
    "source": [
     "# 해당 코드를 통해 [1, 3, 0, 1]과 [4, 3]이 나오는지 확인하세요.\n",
     "print(lonely([1, 1, 3, 3, 0, 1, 1]))\n",
-    "print(lonely([4,4,4,3,3]))"
+    "print(lonely([4, 4, 4, 3, 3]))"
    ]
   }
  ],
